--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,17 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <finalName>MonopolyProject</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
